welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:51: error: not found: type int
def goToNewLine(nbPas:int) {
                      ^